Support MadNLP.jl v0.9

--- a/Project.toml
+++ b/Project.toml
@@ -20,25 +20,25 @@ NonparametricVecchiaVecchiaExt = ["StaticArrays", "Vecchia"]
 
 [compat]
 CUDA = "5.8.2"
-HSL = "0.5.1"
+HSL = "0.5.2"
 Ipopt = "1.10.6"
 JuMP = "1.27.0"
 KernelAbstractions = "0.9.38"
 LinearAlgebra = "1.10"
-MadNLP = "0.8.8"
-MadNLPGPU = "0.7.10"
-MadNLPHSL = "0.6.0"
-NLPModels = "0.21.5"
-NLPModelsIpopt = "0.10.4, 0.11"
-NLPModelsJuMP = "0.13.2"
-NLPModelsTest = "0.10.2"
+MadNLP = "0.9.1"
+MadNLPGPU = "0.8"
+MadNLPHSL = "0.7"
+NLPModels = "0.21.9"
+NLPModelsIpopt = "0.11.1"
+NLPModelsJuMP = "0.13.5"
+NLPModelsTest = "0.10.7"
 SparseArrays = "1.10"
 Test = "1.10"
 UnoSolver = "0.1.9"
 julia = "1.10"
 StaticArrays = "1"
 StableRNGs = "1"
-Vecchia = "0.12.4"
+Vecchia = "0.12.6"
 
 [extras]
 HSL = "34c5aeac-e683-54a6-a0e9-6e0fdc586c50"
